--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.6",
-    "@angular/animations": "^11.2.7",
+    "@angular/animations": "^11.2.11",
     "@angular/common": "^11.2.7",
     "@angular/compiler": "^11.2.7",
     "@angular/core": "^11.2.7",
@@ -61,6 +61,7 @@
     "ngx-bootstrap": "^5.0.0",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-quill": "^5.2.0",
+    "ngx-toastr": "^13.2.1",
     "quill": "^1.3.6",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
