--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@coreui/coreui-pro": "^2.1.14",
     "@coreui/icons": "0.3.0",
     "angular-calendar": "^0.27.11",
+    "angular-file-uploader": "^7.0.3",
     "angular2-datatable": "^0.6.0",
     "angular2-ladda": "^2.0.1",
     "angular2-text-mask": "^9.0.0",
